mvp for reproducing error

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,12 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+RESOURCES_DB_HOST=127.0.0.1
+RESOURCES_DB_PORT=5432
+RESOURCES_DB_DATABASE=resources
+RESOURCES_DB_USERNAME=postgres
+RESOURCES_DB_PASSWORD=postgres
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
